--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
           python-version: '3.10'
 
       - name: Update APIs
-        run: python scraper.py
+        run: |
+          pip install -r requirements.txt
+          python scraper.py
 
       - name: Upload apis
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
