--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,11 @@ jobs:
         uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741
         with:
           name: apis
-          path: nhs-digital/apis
+          path: temp-nhs-digital/apis
+
+      - name: Overwrite nhs apis
+        run: |
+          - cat 'temp-nhs-digital/apis' > 'nhs-digital/apis'
 
       - name: Publish
         run: |
